@startuml
!include ../Style.puml
class EditCommand {
    - itemName : String
    - newItemName : String
    - newQuantity : int
    - newUnitOfMeasurement : String
    - newCategory : String
    - newBuyPrice : float
    - newSellPrice : float
    + EditCommand(...)
    + execute() : void
}

class Item {
    - itemName : String
    - quantity : int
    - unitOfMeasurement : String
    - category : String
    - buyPrice : float
    - sellPrice : float
}

class Itemlist {
    + getItems() : List<Item>
    + getItem(index: int) : Item'
}

class Promotion {
    - itemName : String
    + setItemName(newItemName: String) : void
}

class Promotionlist {
    + itemIsOnPromo(itemName: String) : boolean
    + getPromotion(itemName: String) : Promotion
    + getAllPromotion() : List<Promotion>
}

class Storage {
    + overwriteFile(items: List<Item>) : void
}

class PromotionStorage {
    + overwritePromotionFile(promotions: List<Promotion>) : void
}

EditCommand -> Item
EditCommand --> Itemlist
EditCommand --> Promotion : uses >
EditCommand --> Promotionlist
Storage <-- EditCommand
PromotionStorage <-- EditCommand

@enduml
